# rocket-2048

./: .gitignore  Cargo.toml  Dockerfile  README.md  build pipeline.txt  build.bat
game2048/: Cargo.toml  index.html  todo.txt
game2048/src/: grid.rs  lib.rs  model.rs
src/: main.rs
static/: game2048.d.ts  game2048.js  game2048_bg.wasm  game2048_bg.wasm.d.ts  index.html  package.json
