[package]
name = "rocket-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
actix-files = "0.6.0-beta.13"
actix-rt = "2.5.0"
tokio = { version = "1.0", features = ["full"] }

