[package]
name = "rocket-2048"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-rt = "2.8.0"
tokio = { version = "1.27.0", features = ["full"] }
env_logger = "0.10.0"
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


