[package]
name = "game2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"


[lib]
crate-type = ["cdylib"]


[dependencies.web-sys]
version = "0.3"
features = ["HtmlElement", "HtmlDivElement", "Window", "TouchEvent","TouchList","Touch",]